Resolved merge conflict in ModelScore.java