@@ -1,80 +1,85 @@
 package com.sdm.model;
 
-import org.junit.jupiter.api.Test;
+import com.sdm.app.App;
 import org.junit.jupiter.api.BeforeEach;
-import static org.junit.jupiter.api.Assertions.*;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.logging.Logger;
 
-public class LinearRegressionModelTest {
+import static org.junit.jupiter.api.Assertions.*;
+
+@Tag("unit")
+@SuppressWarnings({"PMD.GuardLogStatement"})
+class LinearRegressionModelTest {
 
     private LinearRegressionModel model;
+    private static final Logger LOGGER = Logger.getLogger(App.class.getName());
+
+    // Explicit constructor to satisfy PMD.AtLeastOneConstructor
+    public LinearRegressionModelTest() {}
 
     @BeforeEach
     void setUp() {
         model = new LinearRegressionModel();
-        System.out.println("\n [DEBUG] Setting up new LinearRegressionModel instance...");
+        LOGGER.info("[DEBUG] Setting up new LinearRegressionModel instance...");
     }
 
     @Test
-    public void testTrainAndPredict() {
-        System.out.println("\n [DEBUG] Running testTrainAndPredict()...");
+    void testTrainAndPredict() {
+        LOGGER.info("[DEBUG] Running testTrainAndPredict()...");
 
-        List<Double> trainingData = Arrays.asList(100.0, 101.0, 102.0, 103.0, 104.0);
-        System.out.println(" Training Data: " + trainingData);
+        final List<Double> trainingData = Arrays.asList(100.0, 101.0, 102.0, 103.0, 104.0);
+        LOGGER.info("Training Data: " + trainingData);
 
         model.train(trainingData);
-        
-        // Debugging the internal state after training
-        System.out.println(" [DEBUG] Model trained. Now predicting next value...");
+        final double predictedPrice = model.predictNext();
+        final double expectedPrice = 105.0;
 
-        double predictedPrice = model.predictNext();
+        LOGGER.info("[DEBUG] Predicted Next Price: " + predictedPrice);
+        assertEquals(expectedPrice, predictedPrice, 0.1, "Prediction is not within expected range!");
+    }
 
-        System.out.println(" [DEBUG] Predicted Next Price: " + predictedPrice);
+    @SuppressWarnings("PMD.JUnitTestContainsTooManyAsserts")
+    @Test
+    void testTrainWithEmptyData() {
+        LOGGER.info("[DEBUG] Running testTrainWithEmptyData()...");
 
-        double expectedPrice = 105.0; // Expected next price in a linear trend
-        assertEquals(expectedPrice, predictedPrice, 0.1, " ERROR: Prediction is not within expected range!");
+        final Exception exception = assertThrows(IllegalArgumentException.class,
+                () -> model.train(Collections.emptyList()));
+        LOGGER.info("[DEBUG] Caught Exception: " + exception.getMessage());
+
+        assertEquals("Training data cannot be null or empty!", exception.getMessage(),
+                "Exception message did not match expected!");
+    }
+
+    @SuppressWarnings("PMD.JUnitTestContainsTooManyAsserts")
+    @Test
+    void testTrainWithNullData() {
+        LOGGER.info("[DEBUG] Running testTrainWithNullData()...");
+
+        final Exception exception = assertThrows(IllegalArgumentException.class,
+                () -> model.train(null));
+        LOGGER.info("[DEBUG] Caught Exception: " + exception.getMessage());
+
+        assertEquals("Training data cannot be null or empty!", exception.getMessage(),
+                "Exception message did not match expected!");
     }
 
     @Test
-    public void testTrainWithEmptyData() {
-        System.out.println("\n [DEBUG] Running testTrainWithEmptyData()...");
+    void testTrainWithSingleValue() {
+        LOGGER.info("[DEBUG] Running testTrainWithSingleValue()...");
 
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> model.train(Collections.emptyList()));
-        
-        System.out.println(" [DEBUG] Caught Exception: " + exception.getMessage());
-
-        assertEquals(" Training data cannot be null or empty!", exception.getMessage(), " ERROR: Exception message did not match expected!");
-    }
-
-    @Test
-    public void testTrainWithNullData() {
-        System.out.println("\n [DEBUG] Running testTrainWithNullData()...");
-
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> model.train(null));
-        
-        System.out.println(" [DEBUG] Caught Exception: " + exception.getMessage());
-
-        assertEquals(" Training data cannot be null or empty!", exception.getMessage(), " ERROR: Exception message did not match expected!");
-    }
-
-    @Test
-    public void testTrainWithSingleValue() {
-        System.out.println("\n [DEBUG] Running testTrainWithSingleValue()...");
-
-        List<Double> trainingData = Arrays.asList(100.0);
-        System.out.println("Training Data: " + trainingData);
+        final List<Double> trainingData = List.of(100.0);
+        LOGGER.info("Training Data: " + trainingData);
 
         model.train(trainingData);
-        
-        // Debugging the internal state after training
-        System.out.println("[DEBUG] Model trained with a single value. Now predicting next value...");
+        final double predictedPrice = model.predictNext();
 
-        double predictedPrice = model.predictNext();
-
-        System.out.println("[DEBUG] Predicted Next Price: " + predictedPrice);
-
-        assertEquals(100.0, predictedPrice, 0.1, " ERROR: Prediction should match single input value!");
+        LOGGER.info("[DEBUG] Predicted Next Price: " + predictedPrice);
+        assertEquals(100.0, predictedPrice, 0.1, "Prediction should match single input value!");
     }
 }
